--- a/index.html
+++ b/index.html
@@ -61,87 +61,101 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
     crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/vue@next"></script>
-  <script>
-    Vue.createApp({
-      data() {
-        return {
-          newTodo: '',
-          todoList: [],
-          editId: '',
-          editText: '',
-          status: ''
-        }
-      },
-      methods: {
-        addTodo() {
-          const todo = this.newTodo.trim();
+  <script type="module">
+    import { createApp, ref, computed } from 'https://cdnjs.cloudflare.com/ajax/libs/vue/3.2.0-beta.7/vue.esm-browser.min.js';
+    createApp({
+      setup() {
+        const newTodo = ref('');
+        const todoList = ref([]);
+        const editId = ref('');
+        const editText = ref('');
+        const status = ref('');
+
+        function addTodo() {
+          const todo = newTodo.value.trim();
           if (todo === "") {
             alert('請輸入代辦事項！')
             return;
           }
-          this.todoList.push({
-            id: this.todoList.length + 1,
-            text: this.newTodo,
+          todoList.value.push({
+            id: todoList.value.length + 1,
+            text: newTodo.value,
             finish: false
           });
-          this.newTodo = '';
-          console.log(this.todoList);
-        },
-        removeTodo(item) {
-          const index = this.todoList.findIndex(obj => obj.id === item.id);
-          this.todoList.splice(index, 1);
-        },
-        editTodo(item) {
-          this.editId = item.id;
-          this.editText = item.text;
-        },
-        editFinish(item) {
-          const eTodo = this.editText.trim();
+          newTodo.value = '';
+          console.log(todoList.value);
+        };
+
+        function removeTodo(item) {
+          const index = todoList.value.findIndex(obj => obj.id === item.id);
+          todoList.value.splice(index, 1);
+        };
+        function editTodo(item) {
+          editId.value = item.id;
+          editText.value = item.text;
+        };
+
+        function editFinish(item) {
+          const eTodo = editText.value.trim();
           if (eTodo === "") {
             alert('代辦事項不可為空白！')
             return;
           }
-          const index = this.todoList.findIndex(obj => obj.id === this.editId);
-          this.todoList[index].text = this.editText;
-          this.editId = '';
-          this.editText = '';
-        },
-        editCancel() {
-          this.editId = '';
-          this.editText = '';
-        },
-        clearAll() {
+          const index = todoList.value.findIndex(obj => obj.id === editId.value);
+          todoList.value[index].text = editText.value;
+          editId.value = '';
+          editText.value = '';
+        };
+        function editCancel() {
+          editId.value = '';
+          editText.value = '';
+        };
+        function clearAll() {
           if (window.confirm('是否確定要刪除全部？')) {
-            this.todoList = [];
-            this.newTodo = '';
-            this.editId = '';
-            this.editText = '';
-            this.status = '';
+            todoList.value = [];
+            newTodo.value = '';
+            editId.value = '';
+            editText.value = '';
+            status.value = '';
           }
-        }
-      },
-      computed: {
-        filterList() {
-          switch (this.status) {
+        };
+
+        const filterList = computed(() => {
+          switch (status.value) {
             case 'active':
-              return this.todoList.filter(function (item) {
+              return todoList.value.filter(function (item) {
                 return item.finish === false;
               });
               break;
 
             case 'finish':
-              return this.todoList.filter(function (item) {
+              return todoList.value.filter(function (item) {
                 return item.finish === true;
               });
               break;
 
             default:
-              return this.todoList;
+              return todoList.value;
               break;
           }
+        });
+
+
+        return {
+          newTodo,
+          todoList,
+          editId,
+          editText,
+          status,
+          addTodo,
+          removeTodo,
+          editTodo,
+          editFinish,
+          editCancel,
+          clearAll,
+          filterList
         }
-      },
+      }
     }).mount('#app');
   </script>
 </body>
